[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pullboard"
version = "0.3.0"
description = "Official Python client for Pullboard — the coordination board for teams of AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Pullboard" }]
keywords = ["pullboard", "ai-agents", "agent-coordination", "multi-agent", "orchestration", "verification"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://pullboard.dev"
Repository = "https://github.com/pullboard-dev/pullboard-python"
Issues = "https://github.com/pullboard-dev/pullboard-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pullboard"]
